fixed s1 on mobile

--- a/src/HomePage/Styling/HomePage1Style.css
+++ b/src/HomePage/Styling/HomePage1Style.css
@@ -9,19 +9,20 @@
 .section1-subheading{
   font-family: Heavitas;
   color: var(--col-bg-blue);
-  font-size: 2rem;
-  margin: 1rem 0rem 0rem 0rem;
+  font-size: 2.5rem;
+  margin: 0rem 0rem 0rem 0rem;
   text-shadow: -4px -4px 0 #101a2d, 4px -4px 0 #101a2d, -4px 4px 0 #101a2d, 4px 4px 0 #101a2d;
 
 }
 .section1-heading{
   font-family: TheBoldFont;
-  font-size: 2.5rem;
-  margin: 0.25rem 0rem;
+  font-size: 3.5rem;
+  margin: 0.5rem 0rem 0.5rem 0rem;
   text-wrap: wrap;
 }
 #Main-Heading-Landing2 {
-  font-size: 1.5rem;
+  font-size: 2.5rem;
+  margin: 0.25rem 0rem 0.25rem 0rem;
 }
 .primary-btn{
   background-color: var(--col-bg-blue);
@@ -47,10 +48,10 @@
   justify-content: center;
   align-items: flex-start;
   font-family: TheBoldFont;
-  margin: 0.5rem 0rem 0rem 0rem;
+  margin: 1rem 0rem 0rem 0rem;
 }
 #s2-headingl2-s1{
-    font-size: 2.5rem;
+    font-size: 4rem;
     background: url(./../../Resources/ComicBkg.jpeg);
     background-size: cover;
     -webkit-text-fill-color: transparent;
@@ -60,7 +61,12 @@
 }
 #s2-headingl2-s2{
     margin: 0rem 0rem 0rem;
-    font-size: 2.5rem;
+    font-size: 4rem;
+    background: url(./../../Resources/ComicBkg.jpeg);
+    background-size: cover;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
 }
 /* CSS FOR DESKTOP NOW */
 @media (min-aspect-ratio: 1.4){
